--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "express": "^4.14.0",
         "markdown": "^0.5.0",
         "mongoose": "^4.5.7",
-        "swig": "^1.4.2"
+        "swig": "^1.4.2",
+        "validate-commit-msg": "^2.14.0"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
