--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
-    "name": "fuck",
-    "version": "1.0.0",
-    "description": "",
-    "main": "app.js",
-    "dependencies": {},
-    "devDependencies": {
-        "body-parser": "^1.15.2",
-        "cookies": "^0.6.1",
-        "express": "^4.14.0",
-        "markdown": "^0.5.0",
-        "mongoose": "^4.5.7",
-        "swig": "^1.4.2",
-        "validate-commit-msg": "^2.14.0"
-    },
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "",
-    "license": "ISC"
+  "name": "fuck",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
+  "dependencies": {},
+  "devDependencies": {
+    "body-parser": "^1.15.2",
+    "cookies": "^0.6.1",
+    "express": "^4.14.0",
+    "markdown": "^0.5.0",
+    "mongoose": "^4.5.7",
+    "swig": "^1.4.2",
+    "validate-commit-msg": "^2.14.0"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "config": {
+    "ghooks": {
+      "commit-msg": "./validate-commit-msg.js"
+    }
+  }
 }
