--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  "dependencies": {},
+  "dependencies": {
+    "commitizen": "^2.10.1"
+  },
   "devDependencies": {
     "body-parser": "^1.15.2",
     "cookies": "^0.6.1",
+    "cz-conventional-changelog": "^2.1.0",
     "express": "^4.14.0",
     "markdown": "^0.5.0",
     "mongoose": "^4.5.7",
@@ -17,5 +20,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
